The local version of setstrongcoupl.f does not work with lhapdf6. We rename it to setstrongcoupl-before-lhpdf6.f, so that the default version of  setstrongcoupl.f is used. Postpone adding the new features in setstrongcoupl-before-lhpdf6.f to default version (needs further examination).
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3334 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ttb_NLO_dec/Makefile
+++ b/ttb_NLO_dec/Makefile
@@ -10,8 +10,8 @@ PDF=lhapdf
 
 #ANALYSIS=top-reconstruction
 #ANALYSIS=denner
-#ANALYSIS=denner-2
-ANALYSIS=top-reconstruction-2
+ANALYSIS=denner-2
+#ANALYSIS=top-reconstruction-2
 ## For static linking uncomment the following
 #STATIC= -static
 #
