fixed minor error
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3339 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/trijet/Makefile
+++ b/trijet/Makefile
@@ -114,7 +114,7 @@ ifeq ("$(ANALYSIS)","minlo")
 FASTJET_CONFIG=$(shell which fastjet-config)
 LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
 FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
-PWHGANAL=pwhg_bookhist-multi.o  pwhg_analysis-minlo.o
+PWHGANAL=pwhg_bookhist-multi.o  pwhg_analysis-minlo.o  observables.o 
 PWHGANAL+=  fastjetfortran.o
 endif
 ifeq ("$(ANALYSIS)","minlo-ycut")
