Major update of revision 3770, to include the treatment of QED radiation as discussed in arXiv:1612.02841[hep-ph]
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3372 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z_ew-BMNNPV/Makefile
+++ b/Z_ew-BMNNPV/Makefile
@@ -1,20 +1,22 @@
 #-*- Makefile -*-
-## Choose compiler: gfortran,g77,ifort
+# Choose Fortran compiler: gfortran,g77,ifort (use recent version, for example 5.4.0)
+#COMPILER=gfortran
 COMPILER=gfortran
-## Choose PDF: native,lhapdf
-## LHAPDF package has to be installed separately
+# Choose C++ compiler: g++
+CXX=g++
+# Choose PDF: native,lhapdf
+# LHAPDF package has to be installed separately
 #PDF = lhapdf
 PDF = native
-#PDF = native
-#Choose Analysis: none, default
-## default analysis may require FASTJET package, that has to be installed separately (see below)
+# Choose Analysis: none, default
+# default analysis may require FASTJET package, that has to be installed separately (see below)
+#ANALYSIS=default
 ANALYSIS=report
-## For static linking uncomment the following
+# For static linking uncomment the following
 #STATIC= -static
 #
-ifeq ("$(COMPILER)","gfortran")	
-F77= gfortran -fno-automatic  -ffixed-line-length-none
-#F77= gfortran -fno-automatic -ggdb -ffixed-line-length-none
+ifeq ("$(COMPILER)","gfortran")
+F77= $(COMPILER) -fno-automatic  -ffixed-line-length-none
 #FPE=-ffpe-trap=invalid,zero,overflow,underflow -finit-real=nan
 # -finit-real=nan
 ## -fbounds-check sometimes causes a weird error due to non-lazy evaluation
@@ -25,8 +27,9 @@ F77= gfortran -fno-automatic  -ffixed-line-length-none
 ## gfortran 4.4.1 optimized with -O3 yields erroneous results
 ## Use -O2 to be on the safe side
 OPT=-O2
-## For debugging uncomment the following
+# For debugging uncomment the following
 ifdef DEBUG
+DEBUG= -ggdb -pg -finit-real=nan
 #FPE=-ffpe-trap=invalid,zero,overflow,underflow -finit-real=nan
 OPT=-O0
 endif
@@ -44,27 +47,50 @@ OPT = -O3 #-fast
 #DEBUG= -debug -g
 endif
 
-OBJ = obj-$(COMPILER)
 
-#HEPMCLOCATION = /usr/local
-#LIBSHEPMC += -L$(HEPMCLOCATION)/lib -lHepMC
+# Folder where object files are stored
+#OBJ = obj-$(COMPILER)
+OBJ = obj
+
+# User defined location of HEPMC (needed by PHOTOS)
+# HEPMCLOCATION=/usr/local
+# LIBSHEPMC+=-L$(HEPMCLOCATION)/lib -lHepMC
 
 PWD=$(shell pwd)
 WDNAME=$(shell basename $(PWD))
 VPATH= ./:../:$(OBJ)/
 
-#PHOTOSCC_CONFIG=PHOTOSPP-config
+#user defined location of PHOTOS (C++ version)
+# PHOTOS needs to be compiled using the same version of the g++ compiler used to compile the .cc files needed by the POWHEG-PYTHIA interface
+# In order to compile PHOTOS with a "non default" compiler, set the variable CXX, for example: > export CXX=g++-5 , CC=gcc-5, F77=gfortran
+# before compiling PHOTOS. After compiling, there will be .a and .so files in the PHOTOS/lib folder. In order to force the linking to the .a libraries when producing
+# the full executable, move the files outside that folder (this way, you don't need to specify the location of the .so file when running).
+#PHOTOSCC_CONFIG=photoscc-config
 #PHOTOSCC_LOCATION=$(shell $(PHOTOSCC_CONFIG) --prefix)
-PHOTOSCC_LOCATION=$(PWD)/PHOTOS
+PHOTOSCC_LOCATION=$(PWD)/PHOTOS/
 PHOTOSFLAGS+=-I$(PHOTOSCC_LOCATION)/include
-LIBSPHOTOSCC=-L$(PHOTOSCC_LOCATION)/lib -lPhotosCxxInterface -lPhotosFortran
+LIBSPHOTOSCC=-L$(PHOTOSCC_LOCATION)/lib -lPhotosCxxInterface -lPhotosFortran -lstdc++ -ldl
 
+#user defined location of PYTHIA8
+# PYTHIA8 needs to be compiled using the same version of the g++ compiler used to compile the .cc files needed by the POWHEG-PYTHIA interface
+# In order to compile PYTHIA8 with a "non default" compiler, set the variable CXX, for example: > export CXX=g++-5 , before compiling PYTHIA
+
+#PYTHIA8_CONFIG=pythia8-config
+#PYTHIA8LOCATION=$(shell $(PYTHIA8_CONFIG) --prefix)
+
+# Pythia 8.1xx
+#PYTHIA8LOCATION=
 PYTHIA8_CONFIG=pythia8-config
-#PYTHIA8_CONFIG=/home/fulvio/Work/POWHEG-BOX-V2/pythia8186/bin/pythia8-config
+#FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include
+#LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++ -ldl
+
+# Pythia 8.2xx
+#PYTHIA8_CONFIG=
+PYTHIA8_CONFIG=pythia8-config
 PYTHIA8LOCATION=$(shell $(PYTHIA8_CONFIG) --prefix)
-#PYTHIA8LOCATION=/home/fulvio/Work/POWHEG-BOX-V2/pythia8186
 FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include
-LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
+LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/ -lpythia8 -llhapdfdummy -lstdc++ -ldl
+
 
 INCLUDE0=$(PWD)
 INCLUDE1=$(shell dirname $(PWD))/include
@@ -85,7 +111,7 @@ ifeq  ("$(STATIC)","-static")
 ## does perform this inclusion. The path has to be set by the user. 
  LIBGFORTRANPATH=/usr/lib/gcc/x86_64-redhat-linux/4.1.2
  LIBSTDCPP=/lib64
- LIBSLHAPDF+=  -L$(LIBGFORTRANPATH)  -lgfortranbegin -lgfortran -L$(LIBSTDCPP) -lstdc++
+ LIBSLHAPDF+= -L$(LIBGFORTRANPATH)  -lgfortranbegin -lgfortran -L$(LIBSTDCPP) -lstdc++
 endif
 LIBS+=$(LIBSLHAPDF)
 else
@@ -124,13 +150,17 @@ endif
 
 #%.o: %.cc
 #	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
-
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS) $(PHOTOSFLAGS)
 
+
 $(shell ../svnversion/svnversion.sh>/dev/null)
 
-LIBS+=-lz
+# Extra system libraries
+LIBS+=-lz 
+
+# Main POWHEG target
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o	\
      real.o real16.o $(PWHGANAL)
 
@@ -144,74 +174,70 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o reshufflemoms.o \
         setlocalscales.o validflav.o mint_upb.o  \
-	pwhgreweight.o opencount.o ubprojections.o $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	pwhgreweight.o opencount.o ubprojections.o lhefread.o pwhg_io_interface.o \
+	rwl_weightlists.o rwl_setup_param_weights.o $(PDFPACK) $(USER) $(FPEOBJ) 
 
-# target to generate LHEF output
 pwhg_main:$(PWHG)
 	$(FF) $(patsubst %,$(OBJ)/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
 
-LHEF=lhef_analysis.o boostrot.o random.o bra_ket_subroutines.o cernroutines.o		\
-     opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
-# target to analyze LHEF output
+# Target to analyze LHEF events
+LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
+     opencount.o powheginput.o $(PWHGANAL)	\
+     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o bra_ket_subroutines.o  $(FPEOBJ)
 lhef_analysis:$(LHEF)
 	$(FF) $(patsubst %,$(OBJ)/%,$(LHEF)) $(LIBS) $(LIBSFASTJET) $(STATIC)  -o $@ 
 
 
+# Target to read event file, shower events with PYTHIA8.1xx (and PHOTOS) + analysis
+PYTHIA81=main-PYTHIA8.o scalupveto.o scalupvetoqpy8.o pythia81F77.o boostrot.o powheginput.o rwl_weightlists.o \
+        $(PWHGANAL) lhefread.o pwhg_analysis_driver.o pwhg_io_interface.o cernroutines.o newunit.o bra_ket_subroutines.o $(FPEOBJ)
 
-# target to read event file, shower events with HERWIG + analysis
-HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
-	pdfdummies.o opencount.o $(FPEOBJ) 
-
-main-HERWIG-lhef: $(HERWIG)
-	$(FF) $(patsubst %,$(OBJ)/%,$(HERWIG))  $(LIBSFASTJET)  $(STATIC) -o $@
-
-# target to read event file, shower events with PYTHIA + analysis
-PYTHIA=main-PYTHIA.o scalupveto.o scalupvetoqpy6.o setup-PYTHIA-lhef.o pythia.o boostrot.o \
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
-	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	photos.o \
-	$(FPEOBJ)
-
-main-PYTHIA-lhef: $(PYTHIA)
-	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA)) $(LIBS) $(LIBSFASTJET)  $(STATIC) -o $@
-
-PYTHIA8=main-PYTHIA8.o scalupveto.o scalupvetoqpy8.o pythia8F77.o boostrot.o powheginput.o \
-        $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o bra_ket_subroutines.o \
-	pwhg_analysis_driver.o random.o cernroutines.o opencount.o      \
-        $(FPEOBJ)
-
-main-PYTHIA8-lhef: $(PYTHIA8)
-	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA8)) $(LIBS) $(LIBSFASTJET) $(LIBPYTHIA8) $(LIBSHEPMC) $(LIBSPHOTOSCC) -L/usr/local/lib $(STATIC)\
-$(LIBSLHAPDF) -o $@
+main-PYTHIA81-lhef: $(PYTHIA81)
+	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA81)) $(LIBPYTHIA8) $(LIBSPHOTOSCC) $(LIBS) $(STATIC) -o $@
 
 
-INT_PHOTOS=main-PHOTOS-lhef.o photosCCF.o scalupveto.o boostrot.o powheginput.o lhefread.o pwhg_io_interface.o rwl_weightlists.o cernroutines.o opencount.o newunit.o mwarn.o $(PDFPACK) $(FPE OBJ)
+# Target to read event file, shower events with PYTHIA8.2xx (and PHOTOS) + analysis
+PYTHIA82=main-PYTHIA8.o scalupveto.o scalupvetoqpy8.o pythia82F77.o boostrot.o powheginput.o rwl_weightlists.o \
+        $(PWHGANAL) lhefread.o pwhg_analysis_driver.o pwhg_io_interface.o cernroutines.o newunit.o bra_ket_subroutines.o $(FPEOBJ)
+
+main-PYTHIA82-lhef: $(PYTHIA82)
+	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA82)) $(LIBPYTHIA8) $(LIBSPHOTOSCC) $(LIBS) $(STATIC) -o $@
+
+
+# Target to add QED Photos shower to LHEF events, produce updated LHEF file
+INT_PHOTOS=main-PHOTOS-lhef.o scalupveto.o photosCCF.o boostrot.o powheginput.o rwl_weightlists.o lhefread.o \
+pwhg_io_interface.o cernroutines.o newunit.o $(FPE OBJ)
 
 main-PHOTOS-lhef: $(INT_PHOTOS)
-	$(FF) $(patsubst %,$(OBJ)/%,$(INT_PHOTOS)) $(LIBS) $(LIBSPHOTOSCC) $(LIBSHEPMC) -lstdc++ $(STATIC) -o $@ \
+	$(FF) $(patsubst %,$(OBJ)/%,$(INT_PHOTOS)) $(LIBSPHOTOSCC) $(LIBS) $(STATIC) -o $@
 
+
+
+# Target to read event file, shower events with PYTHIA6 (and PHOTOS) + analysis
+PYTHIA6=main-PYTHIA6.o scalupveto.o scalupvetoqpy6.o setup-PYTHIA6-lhef.o pythia.o boostrot.o \
+	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
+	pwhg_analysis_driver.o random.o cernroutines.o opencount.o photos.o \
+	$(FPEOBJ)
+
+main-PYTHIA6-lhef: $(PYTHIA6)
+	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA6)) $(LIBS) $(STATIC) -o $@
+
+
+#  target to merge wp and wm samples
+MERGE_wp_wm=merge_wp_wm.o newunit.o random.o cernroutines.o
+
+merge_wp_wm: $(MERGE_wp_wm)
+	$(FF) $(patsubst %.o,$(OBJ)/%.o,$(MERGE_wp_wm)) -o $@
 
 
 
 # target to cleanup
 .PHONY: clean
 clean:
-	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
-	main-PYTHIA-lhef main-PYTHIA8-lhef main-PHOTOS-lhef
-
-###################################################################
-# From here on there are targets specific to the W implementation
-##################################################################
+	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-PYTHIA81-lhef main-PYTHIA82-lhef main-PHOTOS-lhef main-PYTHIA6-lhef merge_wp_wm
 
 
-MERGE_wp_wm=merge_wp_wm.o newunit.o random.o cernroutines.o
-
-#  target to merge wp and wm samples
-merge_wp_wm: $(MERGE_wp_wm)
-	$(FF) $(patsubst %.o,$(OBJ)/%.o,$(MERGE_wp_wm)) -o $@
-
-pwhg_main.o: svn.version
-lhefwrite.o: svn.version
+# pwhg_main.o: svn.version
+# lhefwrite.o: svn.version
 
