minor corrections to Makefile and pythia82F77.cc, to comply with PHOTOS v3.61
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3380 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W_ew-BMNNP/Makefile
+++ b/W_ew-BMNNP/Makefile
@@ -67,6 +67,10 @@ PHOTOSCC_LOCATION=$(PWD)/PHOTOS/
 PHOTOSFLAGS+=-I$(PHOTOSCC_LOCATION)/include
 LIBSPHOTOSCC=-L$(PHOTOSCC_LOCATION)/lib -lPhotosCxxInterface -lPhotosFortran -lstdc++ -ldl
 
+# the line below is for PHOTOS 3.61
+# LIBSPHOTOSCC=-L$(PHOTOSCC_LOCATION)/lib -lPhotospp -lPhotosppHEPEVT -lstdc++ -ldl
+
+
 #user defined location of PYTHIA8
 
 # Pythia 8.1xx
