Makefile modified to compile Pythia 8.2xx
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3383 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W_ew-BMNNP/Makefile
+++ b/W_ew-BMNNP/Makefile
@@ -85,7 +85,7 @@ PYTHIA8_CONFIG=pythia8-config
 #PYTHIA8_CONFIG=
 PYTHIA8LOCATION=$(shell $(PYTHIA8_CONFIG) --prefix)
 FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include
-LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/ -lpythia8 -llhapdfdummy -lstdc++ -ldl
+LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/ -lpythia8 -lstdc++ -ldl
 
 
 INCLUDE0=$(PWD)
