Final bug fixes
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3398 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/HJ/Makefile
+++ b/HJ/Makefile
@@ -224,7 +224,7 @@ nnlopsreweighter: $(NNLOPSREWEIGHTER)
 
 
 NNLOPSREWEIGHTERNRW=nnlopsreweighter-newrwgt.o cernroutines.o powheginput.o lhefread.o lhefwrite.o pwhg_io_interface.o rwl_weightlists.o \
-                 newunit.o boostrot.o pwhgreweight-nnlops.o opencount.o
+                 newunit.o boostrot.o opencount.o
 
 NNLOPSREWEIGHTERNRW+=pwhg_bookhist-multi.o fastjetfortran.o
 
@@ -277,7 +277,7 @@ $(OBJ):
 
 clean:
 	rm -f pwhg_main lhef_analysis main-HERWIG-lhef main-PYTHIA-lhef ; \
-        cd $(OBJ) ; rm -f $(PWHG) $(HERWIG) $(PYTHIA) $(LHEF) $(NNLOPSREWEIGHTER) 
+        cd $(OBJ) ; rm -f $(PWHG) $(HERWIG) $(PYTHIA) $(LHEF) $(NNLOPSREWEIGHTER)  $(NNLOPSREWEIGHTERNRW) 
 
 
 veryclean:
