Updated local copy of lhapdfif.f and added a local version of lhapdf6if.f. These are needed to make sure that alphaspdf can be used without problems also when using a 4f PDF (obviously this is needed here).
Makefile: trivial changes



git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3428 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ST_tch_4f/Makefile
+++ b/ST_tch_4f/Makefile
@@ -242,7 +242,7 @@ LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o	      \
 	$(PWHGANAL) #boost.o
 
 lhef_analysis: $(LHEF)
-	$(FF) $(patsubst %,obj/%,$(LHEF)) $(LIBSFASTJET) $(STATIC)  -o $@ 
+	$(FF) $(patsubst %,obj/%,$(LHEF)) $(LIBS) $(LIBSFASTJET) $(STATIC)  -o $@ 
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o powheginput.o \
