VBF HJJJ: bug fixed in virtual corrections taken from VBFNLO
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3470 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_HJJJ/vbfnlo-files/makefile
+++ b/VBF_HJJJ/vbfnlo-files/makefile
@@ -26,8 +26,9 @@ OBJECTS_PH =./dotproducts.o \
           ./qqhqqj-born.o  \
           ./qqhqqj-virt.o  \
           ./coeff.o \
-          ./hjjj_amp_aux.o \
+          ./hjjj_amp_aux_test.o \
           ./loops_aux.o \
+          ./dilog.o \
           ./qqhqqjj.o  \
           ./qqhqqQQ.o  \
           ./mg_qqqqggh_nc.o  \
