makefile for vbfnlo-files in VBF_HJJJ updated
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3472 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_HJJJ/vbfnlo-files/makefile
+++ b/VBF_HJJJ/vbfnlo-files/makefile
@@ -26,7 +26,7 @@ OBJECTS_PH =./dotproducts.o \
           ./qqhqqj-born.o  \
           ./qqhqqj-virt.o  \
           ./coeff.o \
-          ./hjjj_amp_aux_test.o \
+          ./hjjj_amp_aux.o \
           ./loops_aux.o \
           ./dilog.o \
           ./qqhqqjj.o  \
