added scalupveto to the pwhg_main compilation
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3491 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W_ew-BMNNP/Makefile
+++ b/W_ew-BMNNP/Makefile
@@ -157,7 +157,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	pwhg_analysis_driver.o checkmomzero.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o reshufflemoms.o \
-        setlocalscales.o validflav.o mint_upb.o  \
+        setlocalscales.o validflav.o mint_upb.o scalupveto.o \
 	pwhgreweight.o opencount.o ubprojections.o lhefread.o pwhg_io_interface.o \
 	rwl_weightlists.o rwl_setup_param_weights.o $(PDFPACK) $(USER) $(FPEOBJ) 
 
