--- a/directphoton/pythia_example/Makefile
+++ b/directphoton/pythia_example/Makefile
@@ -2,18 +2,16 @@ ENABLE_SHARED=false
 CXX=g++
 CXX_COMMON=-O2 -ansi -pedantic -W -Wall -Wshadow -fPIC
 
-BASEDIR=/lustre/nyx/alice/users/hpoppenb/pythia
-PYTHIAINC=$(BASEDIR)/include
-PYTHIALIB=$(BASEDIR)/lib
-PYTHIA=-I$(PYTHIAINC) -L$(PYTHIALIB) -lpythia8
+PYTHIA8FLAGS=$(shell pythia8-config --cxxflags)
+PYTHIA8LIBS=-L$(shell pythia8-config --libdir)  -L$(shell pythia8-config --libdir)/archive -lpythia8 -ldl -lstdc++
 
 ROOT=$(shell root-config --cflags --libs)
 
-example: example.cpp  $(PYTHIALIB)/libpythia8.a
-	$(CXX) $(CXX_COMMON) -D _CPPPWHGHOOKS -o $@ $+ $(PYTHIA) -ldl $(ROOT)
+example: example.cpp
+	$(CXX) $(CXX_COMMON) -D _CPPPWHGHOOKS -o $@ $+ $(PYTHIA8FLAGS) $(PYTHIA8LIBS) $(ROOT)
 
-example_QEDQCDHooks: example.cpp  $(PYTHIALIB)/libpythia8.a
-	$(CXX) $(CXX_COMMON) -o $@  $+  $(PYTHIA) -ldl $(ROOT)
+example_QEDQCDHooks: example.cpp
+	$(CXX) $(CXX_COMMON) -o $@  $+ $(PYTHIA8FLAGS) $(PYTHIA8LIBS) $(ROOT)
 
 .PHONY : clean
 clean:
